--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="/img/me.png" alt="Me" />
-    <h1>About Page</h1>
+   {{>header}}
+    <img src="/img/me.png" />
+    <p> Created by {{name}}</p>
   </body>
 </html>
