--- a/templates/help.hbs
+++ b/templates/help.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Help</h1>
+    {{>header}}
+
+   
+    <p>{{helpText}}</p>
   </body>
 </html>
