--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
-   
+
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="/js/app.js"></script>
     <title>Document</title>
   </head>
   <body>
-    
-    <h1>Weather</h1>
+    {{>header}}
+    <p>Created by {{name}}</p>
   </body>
 </html>
