--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,15 @@ body {
   max-width: 650px;
   margin: 0 auto;
   padding: 0 16px;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex-grow: 1;
+  
 }
 
 footer {
@@ -29,3 +38,10 @@ header a {
   text-decoration: none;
 }
 
+/* img {
+  width: 250px; */
+/* } */
+
+.portrait {
+  width: 250px;
+}
