--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,11 +1,14 @@
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <title>Document</title>
+   <link rel="stylesheet" href="/css/styles.css" />
+    <script src="/js/app.js"></script>
+    <title>404 Not Found</title>
   </head>
   <body>
-    {{>header}}
-    <p>{{errorMessage}}</p>
+    <div class="main-content">
+      {{>header}}
+    <p>{{errorMessage}}</p> 
+    </div>
     {{>footer}}
   </body>
 </html>
