--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,12 +1,17 @@
 <html lang="en">
   <head>
 
+    <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/app.js"></script>
-    <title>Document</title>
+    <title>Weather</title>
   </head>
   <body>
-    {{>header}}
+    <div class="main-content">
+      {{>header}}
+    <p>Use this site to get your weather! </p>
+    </div>
+    
      {{>footer}}
   </body>
 </html>
