--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,6 @@ body {
 
 .main-content {
   flex-grow: 1;
-  
 }
 
 footer {
@@ -44,4 +43,17 @@ header a {
 
 .portrait {
   width: 250px;
+}
+
+input {
+  border: 1px solid #cccccc;
+  padding: 8px;
+}
+
+button {
+  cursor: pointer;
+  border: 1px solid #888888;
+  background-color: #888888;
+  color: #fff;
+  padding: 8px;
 }
